force-app/main/default/objects/I_ST_Campus_Territory_Mapping__mdt/I_ST_Campus_Territory_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Scheduler Campus Territory Mapping</label>
    <pluralLabel>Scheduler Campus Territory Mapping</pluralLabel>
</CustomObject>