force-app/main/default/objects/I_ST_Campus_Territory_Mapping__mdt/fields/Campus_Interest__c.field-meta.xml
<CustomField>
    <fullName>Campus_Interest__c</fullName>
    <label>Campus Interest</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Albury-Wodonga</fullName>
                <default>true</default>
                <label>Albury-Wodonga</label>
            </value>
            <value>
                <fullName>Bendigo</fullName>
            </value>
            <value>
                <fullName>City Campus</fullName>
            </value>
            <value>
                <fullName>Melbourne (Bundoora)</fullName>
            </value>
            <value>
                <fullName>Mildura</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Shepparton</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Berwick (Chisholm Institute)</fullName>
            </value>
            <value>
                <fullName>Brunswick (Bouverie)</fullName>
            </value>
            <value>
                <fullName>Bundoora (Latrobe College)</fullName>
            </value>
            <value>
                <fullName>Carlton (Carlton College Sport)</fullName>
            </value>
            <value>
                <fullName>Chisholm311 (Chisholm Institute)</fullName>
            </value>
            <value>
                <fullName>Dandenong (Chisholm Institute)</fullName>
            </value>
            <value>
                <fullName>Distance Education</fullName>
            </value>
            <value>
                <fullName>Epping (Melbourne Polytechnic)</fullName>
            </value>
            <value>
                <fullName>Frankston (Chisholm Institute)</fullName>
            </value>
            <value>
                <fullName>Myrtleford (Alpine Health)</fullName>
            </value>
            <value>
                <fullName>Online (Didasko)</fullName>
            </value>
            <value>
                <fullName>Online (OUA)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>