force-app/main/default/objects/I_ST_Campus_Territory_Mapping__mdt/fields/Service_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory_Name__c</fullName>
    <label>Service Territory Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Albury-Wodonga</fullName>
                <default>true</default>
                <label>Albury-Wodonga</label>
            </value>
            <value>
                <fullName>Bendigo</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Melbourne (Bundoora)</fullName>
            </value>
            <value>
                <fullName>Mildura</fullName>
            </value>
            <value>
                <fullName>Shepparton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>