force-app/main/default/objects/I_ST_Campus_Territory_Mapping__mdt/fields/Study_Level__c.field-meta.xml
<CustomField>
    <fullName>Study_Level__c</fullName>
    <label>Study Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate</fullName>
                <default>true</default>
                <label>Undergraduate</label>
            </value>
            <value>
                <fullName>Postgraduate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>