force-app/main/default/objects/I_ST_Campus_Territory_Mapping__mdt/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>Campus_Interest__c</columns>
    <columns>Service_Territory_Name__c</columns>
    <columns>Study_Level__c</columns>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
    <language>en_US</language>
</ListView>